--- a/style.css
+++ b/style.css
@@ -1,34 +1,122 @@
-body {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
+html {
+    font-size: 16px;
 }
 
 .header {
-    grid-column: span 12;
-    border: 3px solid black;
-    height: 30vh;
+    display: grid;
+    grid-template-columns: 170px 1fr auto;
+    grid-template-rows: 80% 20%;
+    height: 150px;
 }
 
-.logo-container {
+.logo-h1 {
     display: flex;
+    align-items: center;
+    margin-left: 10px;
 }
 
-.header-logo {
+#logo {
     height: 80px;
-    margin: 10px;
+    width: 80px;
+    background-color: rgb(216, 118, 247);
+    border-radius: 50%;
 }
 
-#logo-h1 {
-    margin-top: 30px;
-    margin-bottom: 0;
+.header-title {
+    display: flex;
+    grid-column: 2;
+    align-items: center;
+}
+
+.hamburger {
+    display: flex;
+    grid-column: 3;
+    align-items: center;
 }
 
 .link-container {
     display: flex;
-    justify-content: space-evenly;
+    grid-column: 2;
+    grid-row: 2;
+    justify-content: space-around;
 }
 
-.link-container a {
-    margin: 25px;
-    text-decoration: none;
+.image-container {
+    margin-top: 10px;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+.image-buttons {
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    margin: 10px;
+    margin-top: -20px;
+    border: none;
+    padding: 15px;
+    border-radius: 5px;
+    color: white;
+}
+
+.button-left {
+    background-color: rgb(111, 102, 241);
+}
+
+.button-right {
+    background-color: rgb(111, 102, 241);
+}
+
+.quotes {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 50px;
+}
+
+.quotes-left {
+    display: flex;
+    width: 20rem;
+    align-items: center;
+}
+
+.quotes-right {
+    width: 20rem;
+    display: flex;
+    align-items: center;
+}
+
+.icon-background {
+    display: flex;
+    background-color: lightgrey;
+    height: 6rem;
+    width: 20rem;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
+}
+
+.fa-user {
+    background-color: lightgrey;
+    width: 1rem;
+    height: 1rem;
+}
+
+.text {
+    text-align: center;
+    font-size: 2rem;
+}
+
+.container-cards {
+    display: flex;
+    justify-content: space-around;
+}
+
+.card {
+    background-color: lightgrey;
+    width: 25vw;
 }
