--- a/styles.css
+++ b/styles.css
@@ -22,39 +22,27 @@
     header {
         height: 144px;
         width: 100%;
-        display: grid;
-        grid-template-columns: 155px 80px 1fr 1fr 1fr 1fr 1fr 1fr 1fr auto;
         background-color: #011827;
-        font-family: 'Roboto', sans-serif;
         color: white;
     }
     .logo-container {
         display: flex;
         flex-direction: row;
-        justify-content: center;
         align-items: center;
-        grid-column: 1;
-        grid-row: 1;
+    }
+    .logo-container h1 {
+        width: 78px;
+        height: 84px;
+        font-size: 24px;
+        font-weight: 700;
     }
     #logo {
         width: 128px;
         height: 82px;
+        margin: 0 13px;
     }
     .link-container {
         display: none;
-    }
-    .h1-container {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        grid-column: 2;
-        grid-row: 1;
-    }
-    .h1-container h1 {
-        margin: 0;
-        padding: 0px;
-        height: 78px;
-        width: 84px;
     }
     .image-container img {
         width: 480px;
@@ -238,47 +226,41 @@
         text-decoration: none;
     }
     .header {
-        background-color: #011827;
-        display: grid;
-        grid-template-columns: 130px auto 9fr auto;
-        grid-template-rows: 80% 20%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        width: 100%;
         height: 216px;
-        width: 1280px;
-        color: #FFFFFF;
+        display: flex;
+        background-color: #011827;
+        color: #ffffff;
     }
     .logo-container {
-        grid-column: 1;
-        grid-row: 1;
+        display: flex;
+        align-items: flex-end;
     }
-    .header-links {
-        font-size: 24px;
-        font-weight: bold;
-        color: white;
+    .logo-container h1 {
+        position: relative;
+        top: 21px;
+        font-size: 40px;
+        font-weight: 700;
     }
-    .logo-container img {
+    #logo {
         height: 82px;
         width: 128px;
-    }
-    .h1-container {
-        display: flex;
-        grid-column: 2;
-        grid-row: 1;
-    }
-    .h1-container h1 {
-        width: 404px;
-        height: 47px;
-    }
-    .header-title {
-        display: flex;
-        align-items: center;
-        grid-column: 3;
-        grid-row: 1;
+        margin: 0 24px;
     }
     .link-container {
         display: flex;
-        grid-column: span 13;
-        grid-row: 2;
-        justify-content: space-around;
+        justify-content: space-evenly;
+    }
+    .header-links {
+        color: #ffffff;
+        font-size: 24px;
+        font-weight: 700;
+    }
+    #contact-us-link {
+        color: #8ACFE5;
     }
     .image-container img {
         width: 1280px;
@@ -287,34 +269,36 @@
     .image-buttons {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: space-evenly;
         font-size: 24px;
         text-align: center;
-        padding: 0 323px;
         margin-top: -35px;
+        padding: 0 300px;
     }
     .image-button__online-container {
-        background-color: rgb(111, 102, 241);
         padding: 15px;
         border-radius: 5px;
         background-color: #E3170A;
         color: white;
         margin-bottom: 10px;
-        width: 308px;
+        min-width: 308px;
         height: 66px;
     }
     .image-button__online-container a {
         color: #ffffff;
     }
     .image-button__onsite-container {
-        background-color: rgb(111, 102, 241);
+        background-color: #8ACFE5;
         padding: 15px;
         border-radius: 5px;
         color: white;
-        background-color: #8ACFE5;
         margin-bottom: 10px;
-        width: 308px;
+        min-width: 308px;
         height: 66px;
+    }
+    .image-button__onsite-container a {
+        color: #011827;
+        font-weight: 700;
     }
     .quotes {
         display: flex;
