--- a/styles.css
+++ b/styles.css
@@ -200,7 +200,7 @@
         font-weight: 700;
     }
     footer a {
-        color: #ffffff;
+        color: white;
     }
     footer ul {
         padding: 0;
