--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@
     a {
         text-decoration: none;
     }
+    /*----------Header-section Starts-----------*/
     header {
         height: 144px;
         width: 100%;
@@ -44,6 +45,8 @@
     .link-container {
         display: none;
     }
+    /*----------------------Header-section Ends------------------*/
+    /*----------------------Big-image Starts---------------------*/
     .image-container img {
         width: 480px;
         height: 274px;
@@ -77,6 +80,8 @@
         font-weight: 700;
         color: #36769D;
     }
+    /*----------------------Big-image Ends---------------------------*/
+    /*-------------------Quote-section Starts------------------------*/
     .quotes {
         padding: 15px;
         margin-top: 30px;
@@ -109,6 +114,8 @@
     .quotes-right {
         display: none;
     }
+    /*----------------------------Quote-section Ends--------------------------*/
+    /*------------------------------Card Start---------------------------------*/
     .section-cards {
         margin-bottom: 47px;
         overflow: scroll;
@@ -124,9 +131,17 @@
     }
     .card-outer {
         display: flex;
+        flex-direction: row;
+        justify-content: space-between;
     }
     .card-container {
-        padding: 0 30px;
+        /*----Each individual card ------*/
+        border: 2px solid black;
+        border-radius: 8px;
+        margin: 0 25px;
+    }
+    .card-upper img {
+        width: 100%;
     }
     .card-left {
         border: 2px solid black;
@@ -136,7 +151,58 @@
         width: 363px;
         height: 219px;
     }
-    /*------------------------------Breaking point, carousel---------------------------------*/
+    .card-lower h4 {
+        font-size: 28px;
+        margin: 12px 17px 0 17px;
+    }
+    .card-button-container {
+        display: flex;
+        justify-content: right;
+    }
+    .card-button-container a {
+        font-size: 16px;
+        font-weight: 700;
+        background-color: #E3170A;
+        color: #ffffff;
+        padding: 12px 35px;
+        border-radius: 4px;
+    }
+    .card-lower p {
+        font-size: 18px;
+        padding: 18px 12px;
+    }
+    .checked {
+        color: #E3170A;
+    }
+    .star-h5-container {
+        display: flex;
+        justify-content: space-between;
+        margin: 0 12px;
+        align-items: flex-start;
+    }
+    .star-h5-container h5 {
+        margin: 0;
+        font-size: 14px;
+    }
+    .star-container {
+        grid-column: 1;
+        grid-row: 2;
+        margin-left: .5rem;
+        color: white;
+        border-color: #E3170A;
+    }
+    .card-button-container {
+        padding: 5px 18px 12px 0;
+    }
+    .card-button-container a {
+        font-size: 16px;
+        font-weight: 700;
+        background-color: #E3170A;
+        color: #ffffff;
+        padding: 12px 35px;
+        border-radius: 4px;
+    }
+    /*------------------------------Card End---------------------------------*/
     .article-container {
         width: 100%;
         height: 500px;
