--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@
 }
 
 body {
-    background-color: #E5E5E5;
     font-family: 'Roboto', sans-serif;
+    background-color: #ffffff;
 }
 
 @media screen and (max-width:800px) {
