--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@
         }
         .popup-container {
             position: absolute;
-            top: 48vh;
+            top: 460px;
             left: 50%;
             transform: translate(-50%, -50%);
             height: 914px;
